# monadium_v1

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.copy_only  Makefile  readme.md
.github/workflows/: build.yml  cd.yml  ci.yml  docker_copy_only.yml  docker_copy_only_no_cache.yml  next-gen.yml
curls/: base.sh
curls/identities/: create.sh  list.sh  set_jwt.sh  show.sh  sign_in.sh
curls/profiles/: show.sh
diary/: index.html
docs/: global.css  index.html
docs/favicon/: about.txt
k8s/base/: autoscaler.yaml  deployment.yaml  kustomization.yaml  service.yaml
migrations/: 20210527195516_events.sql  20210527195516_identities_events.sql
migrations/2021-02-02-195217_create_identity/: down.sql  up.sql
migrations/2021-02-14-211310_invitation/: down.sql  up.sql
scripts/: auth-cluster.sh  create-cluster.sh  init-db.sh  install-sqlx.sh
src/: claims.rs  db.rs  errors.rs  event.rs  http.rs  main.rs  models.rs  schema.rs
src/app/: mod.rs
src/app/identity/: list.rs  mod.rs  model.rs  new.rs  schema.rs  show.rs  sign_in.rs
src/app/invitation/: mod.rs  model.rs  schema.rs
src/domain/: mod.rs
src/domain/deps_experiment/: mod.rs
src/domain/health/: mod.rs
src/domain/identities/: create.rs  list.rs  mod.rs  new.rs  repo.rs  show.rs  sign_in.rs  sign_up.rs  types.rs
src/domain/identities/create/: controller.rs  mod.rs  test.rs
src/domain/identities/list/: controller.rs  mod.rs  test.rs
src/domain/identities/repo/: mock.rs  mod.rs  types.rs
src/domain/identities/sign_in/: controller.rs  mod.rs  test.rs
src/domain/lab/: mod.rs
src/domain/payments/: mod.rs  notify.rs  pay.rs
src/domain/profile/: mod.rs  new.rs
src/domain/profile/new/: mod.rs
src/domain/profile/set_image/: mod.rs
src/domain/profiles/: mod.rs
src/domain/profiles/new/: mod.rs
src/domain/profiles/set_image/: mod.rs
src/domain/profiles/show/: mod.rs
src/health/: mod.rs
src/identity/: list.rs  mod.rs  models.rs  new.rs
src/io/: db.rs  error.rs  errors.rs  event_store.rs  http.rs  jwt.rs  mod.rs  password.rs  result.rs  uuid.rs
src/io/event_store/: mock.rs  mod.rs  types.rs
src/io/password/: mock.rs  mod.rs  types.rs
