[package]
name = "monadium"
version = "0.1.0"
authors = ["Marcus Rådell <marcus.radell@sveasolar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8"
jsonwebtoken = "7.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = {version = "0.4", features = ["serde"]}
env_logger = "0.8.3"
uuid= {version = "0.8", features = ["serde","v4"]}
