[package]
name = "app"
version = "0.1.0"
authors = ["Marcus Rådell <marcus.radell@sveasolar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "7.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = {version = "0.4", features = ["serde"]}
env_logger = "0.8.3"
uuid= {version = "0.8", features = ["serde","v4"]}
derive_more = "0.99"
reqwest = {version = "0.10.10", features = ["json"]}
futures = "0.3.15"
futures-util = "0.3.15"
actix-multipart = "0.4.0-beta.4"
